16170
```
Welcome to Scala version 2.10.0.r25048-b20110531064458 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_24).
Type in expressions to have them evaluated.
Type :help for more information.

scala> (2 + 2)
<console>:1: error: illegal start of simple expression
              (;
               ^
<console>:3: error: ';' expected but ')' found.
       2 + 2)
            ^
```
